--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
             "Tests\\": "tests/"
         }
     },
-    "require": {},
+    "require": {
+        "php-ds/php-ds": "^1.2"
+    },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
     }
