--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         }
     },
     "require": {
-        "php-ds/php-ds": "^1.2"
+        "php-ds/php-ds": "^1.2",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
